--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,3 +3,11 @@
 	background-color: white;
 	font-family: sans-serif;
 }
+
+.glcanvas
+{
+	width: 100%;
+	height: 100%;
+	display: block;
+	min-height: 300px;
+}
