--- a/public/index.css
+++ b/public/index.css
@@ -1,10 +1,13 @@
 #root
 {
-    font-family: Helvetica, "Trebuchet MS", Verdana, sans-serif;
-    min-height: 100%;
+	font-family: Helvetica, "Trebuchet MS", Verdana, sans-serif;
+	min-height: 100%;
+	height: 100%;
 }
 
 html, body
 {
-    min-height: 100%;
+	min-height: 100%;
+	height: 100%;
+	margin: 0;
 }
